store file size to db get file size from db

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Wed Apr 04 00:18:57 CST 2012
+#Wed Apr 04 21:43:51 CST 2012
 eclipse.preferences.version=1
 encoding//pdfserver/util.py=utf-8
+encoding//pdfserver/views.py=utf-8
