--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Wed Apr 04 21:43:51 CST 2012
 eclipse.preferences.version=1
+encoding//pdfserver/model/__init__.py=utf-8
+encoding//pdfserver/model/users.py=utf-8
 encoding//pdfserver/util.py=utf-8
 encoding//pdfserver/views.py=utf-8
